# templet-cli

./: Cargo.toml  README.md  todo.md
src/: execution.rs  main.rs  parser.rs  requests.rs  util.rs
src/http/: mod.rs
src/parser/: arg.rs  execution.rs  mod.rs  read_events.rs  reply.rs  write_event.rs
src/sqlite/: mod.rs
